objects/UNITY_Vendor_Preference_By_Trade__c.object
<CustomObject>
    <description>UNITY project - Stores preferred and Do NOT USE vendor list at customer site then trade level. Note vendor preference has to be created first before trade can be specified for a preferred vendor.</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Preference By Trade</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Trade</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <label>Trade</label>
        <referenceTo>FSO__Skill__c</referenceTo>
        <relationshipLabel>Vendor Preference By Trade</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Trade</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                    <default>true</default>
                    <label>Preferred</label>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Preference</label>
        <referenceTo>UNITY_Vendor_Preference__c</referenceTo>
        <relationshipLabel>Vendor Preference By Trade</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Trade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Preference By Trade (Vendor)</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Trade1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Preference By Trade</label>
    <nameField>
        <displayFormat>VPT-{0000000}</displayFormat>
        <label>Vendor Preference By Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Preference By Trade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>